# karma-chat

./: README.md  package-lock.json  package.json
.cargo/: config.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
src/routes/settings/: +layout.svelte
