[package]
name = "karma-chat"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "karma_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
# rustc-wrapper = "sccache"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true
codegen-units = 16      # Параллелизация компиляции
split-debuginfo = "unpacked"  # Ускоряет линковку (Linux)
debug = 1
overflow-checks = false
opt-level = 1           # Базовые оптимизации для разработки

[profile.release]
lto = "thin"
codegen-units = 16      # Баланс скорости и оптимизаций
strip = true
opt-level = 3
